--- a/Proyecto_PDM/app/build.gradle
+++ b/Proyecto_PDM/app/build.gradle
@@ -1,3 +1,5 @@
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -33,6 +35,18 @@ android {
         dataBinding true
         viewBinding true
     }
+
+    buildscript {
+        repositories {
+            google()
+            // Otros repositorios aquí...
+        }
+        dependencies {
+            classpath 'com.android.tools.build:gradle:7.0.0'
+            // Otros plugins aquí...
+        }
+    }
+
 }
 
 dependencies {
@@ -51,7 +65,6 @@ dependencies {
 
     implementation('androidx.recyclerview:recyclerview:1.3.0')
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
-
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
