--- a/Proyecto_PDM/app/build.gradle
+++ b/Proyecto_PDM/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation('androidx.recyclerview:recyclerview:1.3.0')
     implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
