--- a/Proyecto_PDM/app/build.gradle
+++ b/Proyecto_PDM/app/build.gradle
@@ -3,6 +3,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
+
+
 }
 
 android {
@@ -36,16 +39,6 @@ android {
         viewBinding true
     }
 
-    buildscript {
-        repositories {
-            google()
-            // Otros repositorios aquí...
-        }
-        dependencies {
-            classpath 'com.android.tools.build:gradle:7.0.0'
-            // Otros plugins aquí...
-        }
-    }
 
 }
 
